# setuptools metadata
[metadata]
name = geo_mapping
version = 0.2.0
# version = attr: src.VERSION
description = Mapping the annual UK Scout Census to local geographies
long_description = file: README.md
long_description_content_type=  text/markdown
keywords =
    API, scouts
author = Adam Turner, Tom Yems
url = https://github.com/the-scouts/geo_mapping
license = GPLv3
license_files = LICENSE
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
platforms = any

# setuptools options
[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = False
python_requires = >=3.9
install_requires =
    pandas
    numpy
    folium
    branca
    geopandas>=0.8
    shapely
    dash
    pyarrow
    pygeos

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    hypothesis
    pytest-cov
dev =
    black
    isort
