# setuptools metadata
[metadata]
name = incognita
version = 0.28.0
# version = attr: src.VERSION
description = Mapping the annual UK Scout Census to local geographies
long_description = file: README.md
long_description_content_type=  text/markdown
keywords =
    API, scouts
author = Adam Turner, Tom Yems
url = https://github.com/the-scouts/incognita
license = MIT
license_files = LICENSE
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
platforms = any

# setuptools options
[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = False
python_requires = >=3.9
install_requires =
    pandas
    numpy
    geopandas>=0.8
    shapely
    pyarrow
    pygeos
    toml
    pydantic

[options.extras_require]
web = dash

[options.packages.find]
where=src
